--- a/Touri_Server/Views/Home/Chat.cshtml
+++ b/Touri_Server/Views/Home/Chat.cshtml
@@ -6,6 +6,7 @@
     <input type="text" id="message" />
     <input type="button" id="sendmessage" value="Send" />
     <input type="hidden" id="displayname" />
+    <input type="hidden" id="tousername" />
     <ul id="discussion"></ul>
 </div>
 @section scripts {
@@ -28,6 +29,7 @@
             };
             // Get the user name and store it to prepend to messages.
             $('#displayname').val(prompt('Enter your name:', ''));
+            $('#tousername').val(prompt('Enter target username:', ''));
             // Set initial focus to message input box.
             $('#message').focus();
             // Start the connection.
@@ -35,7 +37,7 @@
             $.connection.hub.start().done(function () {
                 $('#sendmessage').click(function () {
                     // Call the Send method on the hub.
-                    chat.server.send($('#displayname').val(), $('#message').val());
+                    chat.server.send($('#displayname').val(), $('#tousername').val(), $('#message').val());
                     // Clear text box and reset focus for next comment.
                     $('#message').val('').focus();
                 });
